--- a/style.css
+++ b/style.css
@@ -1,3 +1,158 @@
-body{
+body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+}
+
+h1 {
+    font-weight: bold;
+    color: black;
+    line-height: 60px;
+}
+p {
+    color: #6C6B6B;
+    list-style: 50px;
+
+}
+nav img{
+    width: 200px;
+}
+.navbar li {
+    padding: 0 17px;
+}
+.nav-button {
+    background: #21B573;
+    color: white;
+    padding: 6px 20px;
+    border-radius: 30px;
+    border: none;
+}
+.web-header {
+    background: linear-gradient(-45deg, #87e6cf, #f1a087, #f1eaab, #68c2e2);
+    background-image: 400% 400%;
+    position: relative;
+    height: 500px;
+}
+.color-p {
+    color: #FD511A;
+}
+.color-h1 {
+   color: #21B573;
+}
+.get-started-btn {
+    background: #21B573;
+    color: white;
+    padding: 6px 20px;
+    border-radius: 30px;
+    border: none;
+}
+.web-banner img {
+    vertical-align: middle;
+    border-style: none;
+    width: 600px;
+}
+.web-courses {
+    margin: 50px 0px;
+}
+.web-courses-item img {
+    width: 70px;
+    height: auto;
+    margin-bottom: 30px;
+}
+.web-courses-item {
+    text-align: center;
+    width: 200px;
+    background: #F8FFFB;
+    border-radius: 10px;
+    padding: 40px 0;
+    margin: 10px;
+}
+.web-courses-item:hover {
+    background: #FFFFFF;
+    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
+}
+.web-courses-item h4 {
+    font-weight: bold;
+    color: #413960;
+    line-height: 25px;
+}
+.online-courses h1 {
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 100px;
+    color: #413960;
+}
+.online-courses img{
+    width: 300px;
+    border-radius: 11px;
+}
+.online-card {
+    margin: 50px 0;
+    border-radius: 18px;
+    border: none;
+    background: #FFFFFF;
+    box-shadow: 0px 10px 20px lightgray;
+}
+.more-info img {
+    width: 25px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+}
+.card-button {
+    background: #21B573;
+    color: white;
+    padding: 6px 20px;
+    border-radius: 30px;
+    border: none;
+}
+.card-body {
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1.25rem 1.25rem 0 1.25rem;
+}
+.web-testimonial h1 {
+    text-align: center;
+    margin-top: 150px;
+    margin-bottom: 50px;
+}
+.web-testimonial img {
+    width: 120px;
+}
+
+.col-md-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding: 0 0 0 120px;
+}
+.col-md-9 {
+    padding: 0 200px 0 0;
+}
+
+.footer-menu p {
+    color: white;
+}
+
+.footer-list {
+    padding: 0;
+}
+
+.footer-list li {
+    list-style: none;
+}
+
+.footer-menu {
+    background: linear-gradient(-45deg, #242927, #30231f, #2c2913, #1a262b);
+    background-image: 400% 400%;
+    position: relative;
+    padding: 20px 0;
+    height: 350px;
+    color: #CDCDCD;
+    text-align: center;
+    margin-top: 80px;
+}
+footer {
+    background: linear-gradient(-45deg, #242927, #30231f, #2c2913, #1a262b);
+    padding: 0 0 20px 0;
+    color: #CDCDCD;
+    text-align: center;
 }
