--- a/style.css
+++ b/style.css
@@ -2,11 +2,21 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
 }
+@media (min-width: 1200px){}
+.container, .container-lg, .container-md, .container-sm, .container-xl {
+    max-width: 1200px;
+}
 
 h1 {
     font-weight: bold;
     color: black;
     line-height: 60px;
+}
+
+h5 {
+    font-weight: bold;
+    color: white;
+    line-height: 30px;
 }
 p {
     color: #6C6B6B;
@@ -29,7 +39,7 @@ nav img{
 .web-header {
     background: linear-gradient(-45deg, #87e6cf, #f1a087, #f1eaab, #68c2e2);
     position: relative;
-    height: 600px;
+    height: 750px;
 }
 .color-p {
     color: #FD511A;
@@ -47,19 +57,18 @@ nav img{
 .web-banner img {
     vertical-align: middle;
     border-style: none;
-    width: 600px;
+    width: 650px;
 }
 .web-courses {
     margin: 50px 0px;
 }
 .web-courses-item img {
-    width: 70px;
+    width: 80px;
     height: auto;
     margin-bottom: 30px;
 }
 .web-courses-item {
     text-align: center;
-    width: 200px;
     background: #F8FFFB;
     border-radius: 10px;
     padding: 40px 0;
@@ -83,6 +92,27 @@ nav img{
 .online-courses img{
     width: 300px;
     border-radius: 11px;
+    margin: auto;
+    padding: 20px 0 0 0 
+}
+.card-title{
+    margin-top: 30px;
+}
+
+@media (min-width: 576px){
+
+}
+.card-deck .card {
+    -ms-flex: 1 0 0%;
+    flex: 1 0 0%;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    border-radius: 20px;
+}
+.card-deck .card:hover {
+    background: #FFFFFF;
+    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
 }
 .online-card {
     margin: 30px 0;
@@ -103,12 +133,6 @@ nav img{
     border-radius: 30px;
     border: none;
 }
-.card-body {
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
-    min-height: 1px;
-    padding: 1.25rem 1.25rem 0 1.25rem;
-}
 .web-testimonial h1 {
     text-align: center;
     margin-top: 150px;
@@ -120,19 +144,18 @@ nav img{
     display: block;
     margin: auto;
 }
-@media screen and (max-width: 992px) {
-    .web-testimonial section p {
-        text-align: center;
-    }
- }
-
-.col-md-3 {
-    flex: 0 0 25%;
-    max-width: 25%;
-    padding: 0 0 0 120px;
+.footer-menu .col-md-3 {
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
-.col-md-9 {
-    padding: 0 200px 0 0;
+
+.footer-menu .col-md-4{
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+.footer-menu .col-md-2{
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
 
 .footer-menu p {
@@ -148,18 +171,16 @@ nav img{
 }
 
 .footer-menu {
-    background: linear-gradient(-45deg, #242927, #30231f, #2c2913, #1a262b);
+    background: linear-gradient(-45deg, #343b38, #412f2a, #413c1d, #23353d);
     background-image: 400% 400%;
     position: relative;
-    padding: 20px 0;
-    height: 350px;
     color: #CDCDCD;
     text-align: center;
     margin-top: 80px;
 }
 footer {
     background: linear-gradient(-45deg, #242927, #30231f, #2c2913, #1a262b);
-    padding: 0 0 20px 0;
+    position: relative;
     color: #CDCDCD;
     text-align: center;
 }
